test/range_float_type.rb.expected
1.0..3.0
1.0
3.0
1.0
3.0
1.0
3.0
true
false
false
true
true
false
true
false
true
false
true
false
true
"1.0..3.0"
"1.0..3.0"
1.0..3.0
[1.0, 1.5, 2.0, 2.5, 3.0]
[0.0, 0.25, 0.5, 0.75, 1.0]
[]
Range
true
max-excl: TypeError
to_a: can't iterate from Float
each: can't iterate from Float
3.5
in
out
1..3
[1, 2, 3]
true
